k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: aplikacja
  labels:
    app: db
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
