k8s/generated-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: db-netpol
  namespace: aplikacja
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: frontend-netpol
  namespace: aplikacja
spec:
  egress:
  - ports:
    - port: 5432
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: db
  - ports:
    - port: 5353
      protocol: UDP
    to:
    - namespaceSelector: {}
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    network-policy-buildtime-generator.stackrox.io/generated: "true"
  name: default-deny-in-namespace-aplikacja
  namespace: aplikacja
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: aplikacja
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
